[project]
name = ["mschuchard.general"]
version = "1.0.0"
dependencies = ["ansible"]
requires-python = ">= 3.10"
authors = [{name = "Matthew Schuchard"}]
maintainers = [{name = "Matthew Schuchard"}]
description = "Contains custom Ansible plugin modules for (currently) Packer and GoSS."
readme = "README.md"
license = {file = "LICENSE"}
