[project]
name = ["mschuchard.general"]
version = "1.1.1"
dependencies = ["ansible"]
requires-python = ">= 3.10"
authors = [{name = "Matthew Schuchard"}]
maintainers = [{name = "Matthew Schuchard"}]
description = "General collection of Ansible plugins for common tools associated with \"DevOps\"."
readme = "README.md"
license = {file = "LICENSE"}
